updated placeholder cam image, fix mobile video bleed

--- a/src/pages/conference/components/Webcam.scss
+++ b/src/pages/conference/components/Webcam.scss
@@ -20,7 +20,7 @@
     &__video {
         height: 100%;
         width: 100%;
-        object-fit: fill;
+        object-fit: cover;
         border-radius: .8em;
     }
 
@@ -33,7 +33,7 @@
     }
     
     &__fullscreen {
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
         height: 92vh;
@@ -44,20 +44,24 @@
     }
 
     &__mini {
-        position: absolute;
+        position: fixed;
         height: 20vh;
         width: 20vh;
         bottom: 0;
         right: 0;
+        border-radius: .8em;
         border: 2px solid $blue;
         margin-bottom: 10vh;
         margin-right: 2vh;
     }
 
     &__image {
-        max-width: 100%;
-        max-height: 100%;
-        background-color: $blue;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: $orange;
     }
 }
 
